 - removed support for seishub clients, since it was dropped for the next major
   obspy release after 1.3.0
 - fix obspy version number check to also work with an obspy developer install
   (which has version numbers like '1.3.0.post0+76')
 - fix overview plot on newer matplotlib versions
 - remove streams that make problems due to masked values and show a warning

0.8.1
 - fix reading QuakeML after Python3 port (see #98)
 - fix calling hyp2000 binary after Python3 port (see #99)

0.8.0
 - port to Python 3 and Qt 5 (see #96)

0.7.2
 - also fetch picks-only events from Jane (see #95)

0.7.1
 - minor fixes and changes (see #94)

0.7.0
 - try to be even more robust when reading lat/lon from Hyp2000 output
 - switch all event fetching/pushing to Jane (see #93)

0.6.2
 - fix latitude/longitude sign for Southern/Western hemisphere when loading in
   Hyp2000 output
 - add example station combination for oklahoma 2011 Ml 5.7 earthquake

0.6.1
 - start up obspyck even if pluginpath is not a valid directory (see #91)
 - fix spectrogram plot (correct the offset adjustment, see #92)

0.6.0
 - avoid error when special use case key `test_event_server_jane` is not
   present (see #71)
 - add possibility to specify complex, time-dependent station combinations
   (see #73)
 - avoid errors when encountering arrivals without a residual time (see #52)
 - add experimental option for reviewing all picks in a given catalog (as
   opposed to normal operation which only considers the first event in a loaded
   catalog file, see #50)
 - enable opting for physical unit conversion switch to go to displacement or
   acceleration (so far always was converting to velocity; see #43)
 - use obspy read_inventory() and Inventory/Response objects internally for
   all metadata, regardless of source (see #77)
 - reimplement AR picker (see #75)
 - make reference time given on command line the zero-time on time axis always
   (so far if an offset was given the zero time was equal to reference time