@@ -13,6 +13,7 @@ master:
    (which has version numbers like '1.3.0.post0+76')
  - fix overview plot on newer matplotlib versions
  - remove streams that make problems due to masked values and show a warning
+ - make scrollWheelPercentage from config affect all scroll events
 
 0.8.1
  - fix reading QuakeML after Python3 port (see #98)
